Fixed some layout bugs

--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
 .wrapper {
   width: 90%;
   max-width: 470px;
-  min-width: 470px;
-  background: linear-gradient(135deg, #0083fe, #6a5cc3);
+  min-width: 370px;
+  background: linear-gradient(135deg, #313a44, #6a5cc3);
   color: #fff;
   margin: 100px auto 0;
   border-radius: 20px;
@@ -21,7 +21,7 @@ body {
   text-align: center;
 }
 .search {
-  width: 100;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -31,7 +31,7 @@ body {
   outline: 0;
   background: #ebfffc;
   color: #555;
-  padding: 10px 25px;
+  padding: 10px 17px;
   height: 60px;
   border-radius: 30px;
   flex: 1;
@@ -62,6 +62,9 @@ body {
   font-size: 80px;
   font-weight: 400;
   margin-top: -10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .details {
   display: flex;
